Self-check: what this branch left half-said
Four things, found by asking of each expedient whether it was one.

`TypeScope.reach` answered `Some` and `None` twice. A clause was added to the
first branch when they were falling through to a question about what a module
exposes, and the branch that replaced the runtime namespace later covers every
case the language gives — so the clause stopped deciding anything, and the two
answers were not even the same one: bare whatever else is in scope, against bare
only while nothing else here is. The second is right anywhere a module could take
the spelling, so the clause is gone and there is one branch for both kinds.

The test written for that regression did not test it. It passed with the clause
removed, because the branch below was already answering. It fails now with that
branch's `LanguageCase` half removed, which is the way this can actually break.
Checked by breaking it, which is what the first version of it was missing.

`Declarations.declaredIn` asked the compilation and fell back to the library
where the answer was empty. The reserved namespace is the library's and nothing
of a compilation is in it, so which world owns the name is a decision and is
written as one — a module of the compilation that declares no types was reaching
the fallback.

`Stdlib.languageDeclarationsIn` gathered its answer on every ask. It is worked
out once with everything else on the library, like every other projection there.

And the diagnostic for two members joining through one case class writes each
identity as itself. That renders a primitive as `Int` where it used to be
`souther.Int`, which is the fake module going out of a message; it is not
`Type.show`, which writes simple names and would print one name twice.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>